--- a/portfolio/css/PortfolioExperience.css
+++ b/portfolio/css/PortfolioExperience.css
@@ -1,56 +1,173 @@
-
+/*Riley Strasser 11/09/2023*/
+ @font-face {
+        font-family: "ostrich";
+        src: url('../fonts/ostrichsans-medium-webfont.woff') format('woff'),
+             url('../fonts/OstrichSans-Medium.ttf') format('truetype');
+        font-weight: 200;
+    }   
+    .google {
+        font-family: 'Roboto', Georgia, "Times New Roman";
+    }
 body {
-        margin: 0 auto;
-        background-color:#322d2d;
-        color: #d9d9d9;
-        font-size: 1.25rem;
+        font-family: Helvetica, sans-serif;
+        background-color:#273a45;
+        color:#cfcfcf;
+        font-size: 1.25em;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-size: cover;
+        background-image: url('../images/flexbg.png');
+        background-repeat: no-repeat; 
     }
-    a:link{
-        color:#FFFFFF;
-        font-family: verdana;
-        text-transform: uppercase;
-        text-decoration: none;
-    }
-    a:visited {
-        color:#ffffff;
-        font-family: verdana;
+    a:link, a:visited {
+        font-family: Helvetica, sans-serif;
+        font-weight: 200;
+        color:#cfcfcf;
         text-transform: uppercase;
         text-decoration: none;
     }
     a:hover {
-        color:#aca7a7;
-        font-family: verdana;
+        font-family: Helvetica, sans-serif;
+        font-weight:200;
+        color:rgb(70, 70, 70);
         text-transform: uppercase;
         text-decoration: none;
     }
-
     ul {
+        font-family: 'ostrich', Helvetica, sans-serif;
+        font-weight: 200;
         list-style-type: none;
+        text-align: left;
+        padding-right: 0;
+        padding-left: 5px;
+    }
+    p {
+        font-family: 'ostrich', Helvetica, sans-serif;
+        text-align: left;
+        background-color: #000000;
+        margin-top: 0;
+        margin-left: 175px;
+        font-size: x-large;
+    }
+    h1{
+        font-family: 'ostrich', Helvetica, sans-serif;
+        font-size: 60px;
+        font-weight: 200;
+        text-transform:uppercase;
+        text-align: left;
+        color:#cfcfcf;
+        margin-bottom: 0;
+    }
+    h2{
+        font-family: 'ostrich', Helvetica, sans-serif;
+        font-size: 60px;
+        text-transform: uppercase;
         text-align: center;
-        padding-right: 50px;
+        color:#cfcfcf;
+        background-color: #0b0b0b;
+        margin-top: 0;
+        margin-bottom: 0;
     }
-    .black{
-        color:rgb(213, 212, 212);
+    h3{
+        font-size: 20px;
+        font-family: Helvetica, sans-serif;
+        font-weight: 200;
+        text-transform:uppercase;
+        text-align: center;
+        margin-bottom: 0;
+        color:#cfcfcf;
+        background-color: #0b0b0b;
     }
-  
+    h4{
+        font-size: 15px;
+        font-family:'Gill Sans', 'Gill Sans MT', sans-serif;
+        text-align: center;
+        background-color: rgb(37, 37, 37);
+        color: #cfcfcf;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    h5{
+        justify-content: center;
+        font-size: 15px;
+        font-family: Helvetica, sans-serif;
+        font-weight: 200;
+        text-transform:uppercase;
+        text-align: center;
+        padding-left: 15px;
+        border: 5px solid rgb(181, 179, 179) ;
+        color:#cfcfcf;
+    }
+    ul {
+        font-family: 'ostrich', Helvetica, sans-serif;
+        font-weight: 100;
+        list-style-type: none;
+        text-align: left;
+        padding-right: 0;
+        padding-left: 5px;
+    }
+    nav{
+        font-family: 'ostrich', Helvetica, sans-serif;
+        font-weight: 100;
+        list-style-type: none;
+        text-align: left;
+        padding-right: 0;
+        padding-left: 5px;
+        margin-bottom: 0;
+    }
     #flex-container{
         display: flex;
         flex-direction: row;
         justify-content: center;
-        width:96.7%;
-        height:450px;
-        background-color:#6a83d6;
+        width:97%;
+        height:500px;
+        background-color:rgb(28, 28, 51);
+        background-image: url('../images/flexbg.png');
         padding-top: 10px;
         text-align:center;
-        padding-right: 50px;
+        padding-right: 45.5px;
         }
+    #home-container{
+        display: flex;
+        width:97%;
+        height:1000px;
+        background-color:rgb(28, 28, 51);
+        background-image: url('../images/flexbg.png');
+        padding-top: 10px;
+        text-align:center;
+        padding-right: 45.5px;
+    }
+    .home-flex{
+        flex-direction: row;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        background-color:black;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+    .home-img{
+        justify-content: center;
+        flex-wrap: wrap;
+        justify-content:space-evenly;
+        align-items: center;
+        padding-top: 20px;
+        width: 100%;
+        height: 100%
+    } 
     .flexbox{
         flex-direction: row;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: left;
         align-items: center;
-        background-color:#363131;
+        background-color:black;
+        padding-top: 0;
+        padding-bottom: 0;
         
     }
 
@@ -62,76 +179,51 @@ body {
         object-fit: fill;
         width: 100%;
      }
-    #a{
-        justify-content: center;
+    #a, #b, #c, #d {
         flex-wrap: wrap;
         align-items: center;
-        border:10px solid #363131;
+        border:10px solid black;
         border-radius: 25px;
         width:350px;
         height:350px;
         margin-top: 50px;
         margin-left: 50px;
     }
-
-    #b{
-        justify-content: center;
+    #home{
         flex-wrap: wrap;
-        align-items: center;
-        border:10px solid #363131;
-        border-radius: 25px;
-        width:350px;
-        height:350px;
+        justify-content: center;
+        border:10px solid rgb(163, 162, 162);
+        border-radius: 15px;
+        width:1700px;
+        height:800px;
         margin-top: 50px;
         margin-left: 50px;
     }
-
-    #c{
+    #about{
         justify-content: center;
-        flex-wrap: wrap;
-        align-items: center;
-        border:10px solid #363131;
-        border-radius: 25px;
-        width:350px;
-        height:350px;
+        border:10px solid rgb(151, 151, 151);
+        border-radius: 15px;
+        width:1700px;
+        height:800px;
         margin-top: 50px;
         margin-left: 50px;
     }
+    .home-button {
+        float: right; 
+        border-radius: 50%;
+        margin-right: 1%;
+        width: 50px;
+        height: 50px;
 
-    .title h3 {
-        margin: 10px;
-    }
-
-    h1{
-        font-size: 40px;
-        text-transform: uppercase;
-        font-family: Verdana;
-        text-align: center;
-        color:#aca7a7;
-    }
-    
-    h2{
-        font-size: 60px;
-        font-family: verdana;
-        text-transform:uppercase;
-        text-align: left;
-        color:#aca7a7;
-    }
-    h3{
-        font-size: 20px;
-        font-family: verdana;
-        text-transform:uppercase;
-        text-align: left;
-        color:#aca7a7;
     }
     .button {
         display: flex;
         flex: wrap;
         justify-content: center;
-        align-items: center;
         width: 100%;
-        color: #FFFFFF;
-        background:  #363131;
+        color:#cfcfcf;
+        background:  black;
+        font-family: 'ostrich', Helvetica, sans-serif;
         text-align: center;
         font-weight: bold;
         font-size: 30px;
@@ -139,11 +231,95 @@ body {
         border-radius: 15px;
         padding:20px;
     }
-    .footer{
-        text-align: center;
-        width: 100%;
-        font: verdana;
-        color:#edeef1;
-
+    .links{
+        width: 10%;
+        height: 10%;
     }
+    input[type=text], select, textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-top: 6px;
+        margin-bottom: 16px;
+      }
+      input[type=submit] {
+        background-color: #04AA6D;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      input[type=submit]:hover {
+        background-color: #45a049;
+      }
+      .contact-container {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+      }
+    #grad {
+        background: linear-gradient(rgb(31, 31, 31), rgb(40, 52, 92));
+      }
+    footer {
+        text-align: center;}
         
+        .footer-container {
+        background-color: rgb(31, 31, 31);
+        display: flex;}
+        
+        .footer-container a {
+        color:#cfcfcf;
+        padding: 42px 16px;
+        height: 100px;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: medium;
+        padding-bottom: 0;
+    }
+
+        a:hover {
+        color:rgb(70, 70, 70);
+        font-family: Helvetica, sans-serif;
+        text-transform: uppercase;
+        text-decoration: none;
+        }
+        a:link{
+            color:#cfcfcf;
+            font-family: Helvetica, sans-serif;
+            text-transform: uppercase;
+            text-decoration: none;
+        }
+        
+        .footer-left {
+        padding-left:50px;
+        margin-top: 50px;
+        margin-right: auto;
+        }
+        
+        .footer-icons {
+        width: 75px;
+        height: 75px;
+        padding-right: 10px;
+        }
+        
+        .footer-icons ul {
+        list-style-type: none;
+        }
+        
+        .footer-icons li {
+        display: inline-block;
+        }
+        
+        .footer-right {
+        margin-top: 50px;
+        padding-right: 50px;
+        margin-left: auto
+        }
+
+        .copyright {
+        background-color: #232324;
+        overflow: hidden;
+        }   
