--- a/portfolio/css/portfolioexperience.css
+++ b/portfolio/css/portfolioexperience.css
@@ -78,7 +78,7 @@ body {
     }
     h4{
         font-size: 15px;
-        font-family:'Gill Sans', 'Gill Sans MT', sans-serif;
+        font-family: Helvetica, sans-serif;
         text-align: center;
         background-color: rgb(37, 37, 37);
         color: #cfcfcf;
@@ -153,7 +153,7 @@ body {
         align-items: center;
         padding-top: 20px;
         width: 100%;
-        height: 100%
+        height: 100%;
     } 
     .flexbox{
         flex-direction: row;
@@ -163,10 +163,8 @@ body {
         align-items: center;
         background-color:black;
         padding-top: 0;
-        padding-bottom: 0;
-        
+        padding-bottom: 0;   
     }
-
     .flexbox img {
         justify-content: center;
         flex-wrap: wrap;
@@ -255,16 +253,17 @@ body {
         border-radius: 5px;
         background-color: #f2f2f2;
         padding: 20px;
-      }
-    #grad {
+        }
+       #grad {
         background: linear-gradient(rgb(31, 31, 31), rgb(40, 52, 92));
-      }
-    footer {
-        text-align: center;}
-        
+       }
+       footer {
+        text-align: center;
+       }
         .footer-container {
         background-color: rgb(31, 31, 31);
-        display: flex;}
+        display: flex;
+       }
         
         .footer-container a {
         color:#cfcfcf;
@@ -274,7 +273,7 @@ body {
         font-weight: 600;
         font-size: medium;
         padding-bottom: 0;
-    }
+       }
 
         a:hover {
         color:rgb(70, 70, 70);
@@ -312,7 +311,7 @@ body {
         .footer-right {
         margin-top: 50px;
         padding-right: 50px;
-        margin-left: auto
+        margin-left: auto;
         }
 
         .copyright {
