--- a/portfolio/css/portfolioexperience.css
+++ b/portfolio/css/portfolioexperience.css
@@ -6,13 +6,11 @@
         font-weight: 200;
     }   
     .google {
-        font-family: 'Roboto', Georgia, "Times New Roman";
+        font-family: 'Roboto', Helvetica, "Times New Roman";
     }
 body {
         font-family: Helvetica, sans-serif;
-        background-color:#273a45;
         color:#cfcfcf;
-        font-size: 1.25em;
         width: 100%;
         height: 100%;
         margin: 0;
@@ -68,7 +66,7 @@ body {
     }
     h3{
         font-size: 20px;
-        font-family: Helvetica, sans-serif;
+        font-family: 'Roboto', Helvetica, "Times New Roman";
         font-weight: 200;
         text-transform:uppercase;
         text-align: center;
@@ -78,7 +76,7 @@ body {
     }
     h4{
         font-size: 15px;
-        font-family: Helvetica, sans-serif;
+        font-family: 'Roboto', Helvetica, "Times New Roman";
         text-align: center;
         background-color: rgb(37, 37, 37);
         color: #cfcfcf;
