--- a/portfolio/css/portfolioexperience.css
+++ b/portfolio/css/portfolioexperience.css
@@ -66,7 +66,7 @@ body {
     }
     h3{
         font-size: 20px;
-        font-family: 'Roboto', Helvetica, "Times New Roman";
+        font-family: 'Roboto', Helvetica, sans-serif;
         font-weight: 200;
         text-transform:uppercase;
         text-align: center;
@@ -76,7 +76,7 @@ body {
     }
     h4{
         font-size: 15px;
-        font-family: 'Roboto', Helvetica, "Times New Roman";
+        font-family: 'Roboto', Helvetica, sans-serif;
         text-align: center;
         background-color: rgb(37, 37, 37);
         color: #cfcfcf;
