--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -1,6 +1,7 @@
  /*Riley Strasser 2/2/25*/
-/*Text*/
+/*------------------Text Styles---------------------*/
 ul {
+    position: fixed;
     font-family: Helvetica, sans-serif;
     font-weight: bolder;
     font-size: large;
@@ -8,9 +9,15 @@ ul {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    color: #ffffff;
+    background-color: #20202099;
+    width: 100%;
+    height: 30px;
+    padding-left: auto;
+    padding-right: auto;
+    margin-top: 0;
+    padding-top: 10px;
     text-align: center;
-    padding-right: 80px;
-    padding-left: 80px;
 }
 p {
     font-family: Helvetica, sans-serif;
@@ -20,10 +27,11 @@ p {
     font-size: x-large;
 }
 h1{
-    color:#1b1b1b;
+    text-align: center;
+    color:#fbfbfb;
     font-family: Helvetica, sans-serif;
     font-weight: 900;
-    font-size: large;
+    font-size: 70px;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -53,26 +61,31 @@ h4{
     text-decoration: none;
 }
 h5{
-    color:#000000;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: medium;
-}
-a:hover{
-    color:#b6b6b6;
-}
-h3:hover{
-    color:#b6b6b6;
-}
-a:link, a:visited{
-    color:#1b1b1b;
+    color:#fdfdfd;
     font-family: Helvetica, sans-serif;
     font-weight: 900;
     font-size: large;
     text-transform: uppercase;
     text-decoration: none;
 }
-/*Header Section-----------------------------*/
-/*Nav Bar*/
+h6{
+    color:#fdfdfd;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
+}
+h3:hover{
+    color:#b6b6b6;
+}
+a:link, a:visited{
+    color:#c3c3c3;
+    font-family: Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: large;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+/*---------------Header Section-------------------------*/
+/*---------------Nav Bar--------------------------------*/
 nav>ul>li>a:hover {
     color:rgb(255, 255, 255);
     font-family: Helvetica, sans-serif;
@@ -80,7 +93,6 @@ nav>ul>li>a:hover {
     font-size: 20px;
     text-decoration: none;
 }
-
 nav{
     font-family: Helvetica, sans-serif;
     font-weight: bolder;
@@ -93,24 +105,7 @@ nav{
     padding-left: 0;
     margin-bottom: 0;
 }
-/*Buttons*/
-button {
-    margin-left: 300px;
-    text-align: center;
-    width: 220px;
-    height: 50px;
-    font-weight: 900;
-    font-size: 30px;
-    color:#1b1b1b;
-    background-color: #d1cfcf;
-}
-button:hover{
-    background: transparent;
-    color:#b6b6b6;
-    font-weight: 900;
-    font-size: 30px;
-}
-/*Main Body Section-----------------------------*/
+/*-------------------Main Body Section----------------*/
 body {
     width: 100%;
     height: 100%;
@@ -128,8 +123,8 @@ body {
     height:600px;
     margin-left: 30px;
     margin-right: 0px;
-    padding-top: 10px;
-    padding-bottom: 100px;
+    padding-top: 100px;
+    padding-bottom: 0px;
  
 }
 #home{
@@ -164,89 +159,128 @@ body {
     padding-top: 40px;
     padding-bottom: 100px;
 }
-.gallery{
-    width: 900px;
-    display: flex;
-    overflow-x: scroll;
-}
-.gallery div{
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 20px;
-    padding: 10px;
-    flex: none;
-}
-.gallery div img{
-    width: 100%;
-    filter: grayscale(100%);
-    transition: transform 0.5s;
-}
-.gallery::-webkit-scrollbar{
-    display: none;
-}
-.gallery-wrap{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10% auto;
-}
-#backBtn, #nextBtn{
-    width: 50px;
-    cursor: pointer;
-    margin: 40px;
-}
-.gallery div img:hover{
-    filter: grayscale(0);
-    cursor: pointer;
-    transform: scale(1.1);
-}
 #shop{
     display: flex;
     justify-content: center;
-    border-radius: 0px;
-    width:94%;
-    height:150px;
+    background-color: #ffffff;
+    border-radius: 40px;
     margin-left: auto;
     margin-right: auto;
+    width: 80%;
+    height:150px;
+    margin-top: 0px;
     padding-bottom: 200px;
+    padding-right: 100px;
 }
 #price-box{
     display: flex;
     justify-content: center;
-    background-color: #ffffff;
+    background-color: #1b1b1b;
     margin-left: auto;
     margin-right: auto;
     border-radius: 0px;
-    width:94%;
+    width: 94%;
     height:50px;
     margin-top: 25px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
-.item1, .item2, .item3 {
+.item1, .item2, .item3{
     display: flex;
     justify-content: space-evenly;
-    width: 350px;
-    height: 350px;
     padding-left: 100px;
-    padding-top: 0;
+    padding-top: 20px;
     padding-bottom: 0;   
 }
 .price1, .price2, .price3 {
     display: flex;
+    align-items: center;
     justify-content: space-evenly;
-    width: 350px;
-    height: 100px;
-    padding-left: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 50px;
+    padding-left: 125px;
     padding-top: 0;
-    padding-bottom: 0;   
+    padding-bottom: 0;
+    padding-right: 100px;
 }
-/*Footer section-----------------------------*/
+/*ticket table*/
+  .styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 0;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-table thead tr {
+    background-color: #181818;
+    color: #ffffff;
+    text-align: center;
+    height: 80px;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+    text-align: center;
+}
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+th:hover{
+    color: white;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+.styled-table tbody tr:nth-of-type(odd) {
+    background-color: #e6e6e6;
+}
+.ticket-text{
+    text-align: center;
+}
+/*image carousel*/
+ #carousel-container {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 0;
+ }
+ #carousel-buttons {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  color: #ebebeb;
+ }
+ #left_button, #right_button{
+  display: flex;
+  justify-content: center;
+  display: inline-block;
+  margin-bottom: 0px;
+  width: 530px;
+  height: 40px;
+  background-color: #181818;
+  color: #ebebeb;
+  font-size: 30px;
+ }
+ /*---------------Videos Section---------------*/
+ .video-container-right {
+  display: inline-block;
+  justify-content: center;
+  margin-left: 100px;
+  padding-bottom: 100px;
+  margin-top: 0;
+ }
+/*---------------Footer section----------------------*/
    footer {
     text-align: center;
 }
     .footer-container {
-    background-color: #d1cfcf;
+    background-color: #20202099;
     display: flex;
     flex-direction: row;
     padding-bottom: 40px;
@@ -257,7 +291,7 @@ body {
     margin-right: 380px;
 }
 
-/*Contact Form*/
+/*-----Contact Form-----*/
 .contact-form {
     background-color: #fff;
     padding: 20px;
@@ -306,7 +340,7 @@ body {
     color: red;
     font-size: small;
    }
-/*Bottom Footer link icons*/
+/*-----Footer link icons-----*/
     .footer-icons {
     display: flex;
     justify-content: center;
